# python-template

./: .pre-commit-config.yaml  Makefile  README.md  init_project.py  mkdocs.yml  pyproject.toml
scripts/: setup.sh
src/cli/: main.py
src/project/: __init__.py  main.py
tests/: conftest.py  test_cli.py  test_demo.py
